@@ -34,6 +34,9 @@ Post v24.03.0
   - NATs can now be given an arbitrary match condition and priority. This
     allows for conditional NATs to be configured. See the ovn-nb(5) man
     page for more information.
+  - Add support for CT zone limit that can be specified per LR
+    (options:ct-zone-limit), LS (other_config:ct-zone-limit) or LSP
+    (options:ct-zone-limit).
 
 OVN v24.03.0 - 01 Mar 2024
 --------------------------
